# Sonic-Weather

./: README.md  main.py  meteo.py  pyproject.toml  spotify.py
frontend/: package.json  pnpm-lock.yaml  vercel.json
frontend/public/data/: meteo_swiss_filtered.parquet  stations.parquet  swiss_charts_enriched.parquet
frontend/src/: App.css  App.tsx  index.css  types.tsx
frontend/src/components/: MapVisualization.tsx  SunshineVisualization.tsx  TimelineChart.tsx
