[project]
name = "sonic-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.13",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sonic_weather"]
